2011-01-27  Sergio Villar Senin  <svillar@igalia.com>

        Unreviewed.

        New test expectations for http/tests/navigation/error404* in GTK.

        * platform/gtk/Skipped:
        * platform/gtk/http/tests/navigation/error404-basic-expected.txt: Added.
        * platform/gtk/http/tests/navigation/error404-goback-expected.txt: Added.
        * platform/gtk/http/tests/navigation/error404-subframeload-expected.txt: Added.

2011-01-27  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skipping 2 more media tests.

        [GStreamer] wrong media duration report in media/controls-after-reload.html
        https://bugs.webkit.org/show_bug.cgi?id=51602

        * platform/gtk/Skipped:

2011-01-27  Yuzo Fujishima  <yuzo@google.com>

        Unreviewed Chromium test expectation change.

        * platform/chromium/test_expectations.txt:

2011-01-27  Yuzo Fujishima  <yuzo@google.com>

        Unreviewed Chromium test expectation change.

        * platform/chromium-mac-leopard/css2.1/t0905-c5525-fltcont-00-d-g-expected.checksum: Removed.
        * platform/chromium-mac-leopard/css2.1/t0905-c5525-fltcont-00-d-g-expected.png: Removed.
        * platform/chromium-mac-leopard/fast/blockflow/vertical-baseline-alignment-expected.checksum: Removed.
        * platform/chromium-mac-leopard/fast/blockflow/vertical-baseline-alignment-expected.png: Removed.
        * platform/chromium-mac-leopard/fast/multicol/shadow-breaking-expected.checksum: Removed.
        * platform/chromium-mac-leopard/fast/repaint/line-flow-with-floats-1-expected.checksum: Removed.
        * platform/chromium-mac-leopard/fast/repaint/line-flow-with-floats-1-expected.png: Removed.
        * platform/chromium-mac-leopard/fast/repaint/line-flow-with-floats-10-expected.checksum: Removed.
        * platform/chromium-mac-leopard/fast/repaint/line-flow-with-floats-10-expected.png: Removed.
        * platform/chromium-mac-leopard/fast/repaint/line-flow-with-floats-2-expected.checksum: Removed.